add update method
